UPDATE added menu for selecting a modality in extraction task